--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,22 +2,24 @@ name: Daily Commit
 
 on:
   schedule:
-    - cron: '0 5 * * *'   # Runs daily at 5 AM UTC
-  workflow_dispatch:       # Allows manual run
+    - cron: '0 5 * * *'  # Runs daily at 5 AM UTC
+  workflow_dispatch:
 
 jobs:
   commit:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout repo
+        uses: actions/checkout@v4
 
-    - name: Make a commit
-      run: |
-        echo "Updated on $(date)" >> activity_log.txt
-        git config --global user.name "Rahul Joshi"
-        git config --global user.email "rj1342627@gmail.com"
-        git add .
-        git commit -m "Daily update: $(date)"
-        git push
+      - name: Make a commit
+        run: |
+          echo "Updated on $(date)" >> activity_log.txt
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add activity_log.txt
+          git commit -m "Daily update: $(date)" || echo "Nothing to commit"
+          git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
