--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Daily Commit
 
 on:
   schedule:
-    - cron: '0 5 * * *'  # Runs daily at 5 AM UTC
+    - cron: '0 5 * * *'  # Runs daily at 5 AM UTC (10:30 AM IST)
   workflow_dispatch:
 
 jobs:
@@ -15,8 +15,8 @@ jobs:
 
       - name: Setup Git
         run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "Rahul Joshi"
+          git config --global user.email "rj1342627@gmail.com"
 
       - name: Debug Git Status
         run: |
